app/components/styles/ChatContainer.scss
.ChatContainer {
  &.hidden {
    display: none;
  }

  width: 99vw !important;
  height: 98vh !important;
  max-width: none !important;
  max-height: none !important;
  margin: auto !important;
  padding: 0;
  border: 1px solid rgba(0, 0, 0, 0.117647);
  border-radius: 5px;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  background: #f4f4f8;

  &.standaloneMode {
    width: 100vw !important;
    height: 100vh !important;
    position: initial;
    right: 0;
    bottom: 0;
    border: none;
    border-radius: 0;
    animation: none;
  }

  .chatContainerBody {
    flex: 1 1 auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    overflow: hidden;
  }

  .waitScreenScrollWrapper {
    flex: 1 1 auto;
    display: flex;
    flex-direction: column;
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
  }

  .transcriptAreaWithWaitScreen {
    display: flex;
    flex: 0 1 auto;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    width: 100%;
    white-space: pre-wrap;
  }

  .transcriptArea {
    display: flex;
    flex: 1 1 auto;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    width: 100%;
    white-space: pre-wrap;
  }

  .banner,
  .errorBanner {
    flex: 0 0 auto;
    color: #fff;
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-weight: 300;
    font-size: 14px;
    padding: 0 30px;
    align-items: stretch;
    text-align: center;
  }

  .banner {
    background: #59ad5d;
    height: 60px;
  }

  .errorBanner {
    background: #ad2215;
    height: 50px;
  }
}

.noFlexbox .ChatContainer {
  // Default demensions
  width: 400px;
  height: 600px;

  .banner,
  .errorBanner {
    width: 342px;
    max-width: 342px;
    min-width: 342px;
    text-align: center;
  }

  .banner,
  .errorBanner {
    position: absolute;
    top: 30px;
    height: 50px;
    min-height: 50px;
    max-height: 50px;
    display: table;

    span {
      display: table-cell;
      vertical-align: middle;
    }
  }
}

